refactor:重写number
